# graph-network

./: .gitignore  README.md  main.py  pyproject.toml  requirements_test.txt  setup.py
.github/workflows/: python-app.yml
graphnet/: edge.py  graph_network.py  id_generator.py  network.py  node.py
src/: edge.py  network.py  node.py
src/graphnet/: edge.py
tests/: example_graph_network_input.xlsx  test_build_graph_direct.py  test_build_graphnetwork_from_file.py
