[project]
name = "graphnet"
# version = "0.1.0"

description = "A simple graph network comprising of nodes & edges for network analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {email = "matthew.davidson@generalfusion.com"},
  {name = "Matthew Davidson"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version"]

dependencies = [
    "pandas==1.5.3",
    "openpyxl==3.0.10",
]

[project.optional-dependencies]
test = [
  "pytest==7.2.1",
]

dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "graphnet.__version__"}

[project.urls]
# homepage = "https://example.com"
# documentation = "https://readthedocs.org"
repository = "https://github.com/generalmattza/graph-network.git"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

#[project.scripts]
#spam-cli = "spam:main_cli"

#[project.gui-scripts]
#spam-gui = "spam:main_gui"

#[project.entry-points."spam.magical"]
#tomatoes = "spam:main_tomatoes"